--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <img src="/imagescss/section 2/imga.jpg" Сервис width 370 height="295" alt="">
+                <img src="/imagescss/section-2/imga.jpg" width="370" height="300" alt="Сервис">
             </li>
             <li>
-                <img src="/imagescss/section 2/imgb.jpg" Контроль качеств аwidth 370 height=" 295" alt="">
+                <img src="/imagescss/section-2/imgb.jpg" width="370" height="300" alt="Контроль-качечтва ">
             </li>
             <li>
-                <img src="/imagescss/section 2/imgc.jpg" Дизайн  width 370 height="295" alt="">
+                <img src="/imagescss/section-2/imgc.jpg" width="370" height="300" alt="Дизайн">
             </li>
         </ul>
     </section>
@@ -78,29 +78,29 @@
         <ul>
             <li>
                 <div>
-                  <img src="/imagescss/section 2/imga1.jpg"width 270 height=" 260" alt="">
-                  <h3>Игорь Демьяненко</h3>
+                  <img src="/imagescss/section-2/imga1.jpg" width="270" height="260" alt="Игорь-Демьяненко">
+                  <h3>Игорь-Демьяненко</h3>
                   <p lang="en">Product Designer</p>
                 </div>
             </li>
             <li>
                 <div>
-                  <img src="/imagescss/section 2/imgb1.jpg"Ольга Репина width 270 height="260" alt="">
-                  <h3>Ольга Репина</h3>
+                  <img src="/imagescss/section-2/imgb1.jpg" width="270" height="260" alt="Ольга-Репина">
+                  <h3>Ольга-Репина</h3>
                   <p lang="en">Frontend Developer</p>
                 </div>
             </li>
             <li>
                 <div>
-                  <img src="/imagescss/section 2/imgc1.jpg" Николай Тарасов width 270 height="260" alt="">
-                  <h3>Николай Тарасов</h3>
+                  <img src="/imagescss/section-2/imgc1.jpg" width="270"  height="260" alt="Николай-Тарасов">
+                  <h3>Николай-Тарасов</h3>
                   <p lang="en">Marketing</p>
                 </div>
             </li>
             <li>
                 <div>
-                  <img src="/imagescss/section 2/imgd1.jpg" Михаил Ермаков width 270 height="260" alt="">
-                  <h3>Михаил Ермаков</h3>
+                  <img src="/imagescss/section-2/imgd1.jpg" width="270" height="260" alt="Михаил-Ермаков">
+                  <h3>Михаил-Ермаков</h3>
                   <p lang="en">UI Designer</p>
                 </div>
             </li>
@@ -110,6 +110,7 @@
     
  </main>
 <!-- секция футер , подвал  -->
+<footer>
 <a href="https://www.WebStudio.com/">WebStudio</a>
   <address>
       <a href="https://goo.gl/maps/VXQnrtuLDi7t38XR7">г. Киев, пр-т Леси Украинки, 26</a>
@@ -120,9 +121,9 @@
      </il>
      <il>
          <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
-    </il>
+     </il>
  </ul>
- 
+</footer>
 </body>
 </html>
 
